@@ -4,5 +4,18 @@
 Package containing Spring's basic AOP infrastructure,
 compliant with the AOP Alliance interfaces.
 
+<p>
+Spring AOP supports proxying interfaces or classes, introductions, and offers static
+and dynamic pointcuts.
+
+<p>
+Any Spring AOP proxy can be cast to the ProxyConfig AOP configuration interface
+in this package to add or remove interceptors.
+<p>
+
+The ProxyFactoryBean is a convenient way to create AOP proxies in a BeanFactory or#
+ApplicationContext. However, proxies can be created programmatically using the
+ProxyFactory class.
+
 </body>
 </html>
